--- a/Digi_Catalogue/SplitViewStoryBoard.storyboard
+++ b/Digi_Catalogue/SplitViewStoryBoard.storyboard
@@ -107,7 +107,7 @@
                                             <segment title="Purity"/>
                                             <segment title="Name"/>
                                         </segments>
-                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                        <color key="tintColor" red="0.19619734120000001" green="0.150705178" blue="0.10147142100000001" alpha="1" colorSpace="calibratedRGB"/>
                                     </segmentedControl>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Quick Search" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oGF-lL-0rS">
                                         <rect key="frame" x="8" y="84" width="584" height="21"/>
@@ -182,30 +182,54 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <color key="separatorColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="separatorColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" id="rIj-Eq-ZZF" customClass="ProductListTableViewCell">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ProductItem" rowHeight="80" id="rIj-Eq-ZZF" customClass="ProductItemCell">
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="rIj-Eq-ZZF" id="ufp-Xh-lmA">
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9xY-Ot-8Rr">
-                                            <rect key="frame" x="20" y="13" width="560" height="20"/>
-                                            <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="16"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ProductItem" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9xY-Ot-8Rr">
+                                            <rect key="frame" x="20" y="2" width="560" height="75"/>
+                                            <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="18"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
-                                    <color key="backgroundColor" red="0.99607843139999996" green="0.90980392160000001" blue="0.68235294120000001" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="backgroundColor" red="0.99607843139999996" green="0.86727396278184565" blue="0.60333745047372145" alpha="1" colorSpace="calibratedRGB"/>
                                     <constraints>
-                                        <constraint firstAttribute="bottom" secondItem="9xY-Ot-8Rr" secondAttribute="bottom" constant="10" id="90X-hU-bY4"/>
-                                        <constraint firstItem="9xY-Ot-8Rr" firstAttribute="top" secondItem="ufp-Xh-lmA" secondAttribute="top" constant="13" id="97a-Sa-R2X"/>
+                                        <constraint firstAttribute="bottom" secondItem="9xY-Ot-8Rr" secondAttribute="bottom" constant="2" id="90X-hU-bY4"/>
+                                        <constraint firstItem="9xY-Ot-8Rr" firstAttribute="top" secondItem="ufp-Xh-lmA" secondAttribute="top" constant="2" id="97a-Sa-R2X"/>
                                         <constraint firstItem="9xY-Ot-8Rr" firstAttribute="leading" secondItem="ufp-Xh-lmA" secondAttribute="leading" constant="20" id="PpV-jw-33V"/>
                                         <constraint firstAttribute="trailing" secondItem="9xY-Ot-8Rr" secondAttribute="trailing" constant="20" id="cQX-sr-pZt"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <outlet property="categoryTitleLabel" destination="9xY-Ot-8Rr" id="k8H-Fs-ili"/>
+                                    <outlet property="productType" destination="9xY-Ot-8Rr" id="MMD-2Q-nMa"/>
+                                </connections>
+                            </tableViewCell>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" id="6zd-RQ-Abe" customClass="ProductListTableViewCell">
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="6zd-RQ-Abe" id="OUm-a8-8Wv">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="11w-CB-1sl">
+                                            <rect key="frame" x="20" y="2" width="560" height="39"/>
+                                            <fontDescription key="fontDescription" name="Futura-MediumItalic" family="Futura" pointSize="16"/>
+                                            <color key="textColor" red="0.19619734120000001" green="0.150705178" blue="0.10147142100000001" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <color key="backgroundColor" red="0.99055356952154694" green="0.84416427688497542" blue="0.74487680403705392" alpha="1" colorSpace="calibratedRGB"/>
+                                    <constraints>
+                                        <constraint firstAttribute="trailing" secondItem="11w-CB-1sl" secondAttribute="trailing" constant="20" id="Fu1-BF-Vzc"/>
+                                        <constraint firstAttribute="bottom" secondItem="11w-CB-1sl" secondAttribute="bottom" constant="2" id="OjE-GZ-h0P"/>
+                                        <constraint firstItem="11w-CB-1sl" firstAttribute="leading" secondItem="OUm-a8-8Wv" secondAttribute="leading" constant="20" id="bau-M0-kkl"/>
+                                        <constraint firstItem="11w-CB-1sl" firstAttribute="top" secondItem="OUm-a8-8Wv" secondAttribute="top" constant="2" id="dri-5Y-mEW"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="categoryTitleLabel" destination="11w-CB-1sl" id="Exh-9M-lFQ"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -227,9 +251,10 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="XLp-CM-aVy">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <color key="barTintColor" red="0.67479476429999996" green="0.60092939759999997" blue="0.23413261939999999" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="barTintColor" red="0.7511285004878453" green="0.66954686492835047" blue="0.27025752619624516" alpha="1" colorSpace="calibratedRGB"/>
                         <textAttributes key="titleTextAttributes">
-                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <fontDescription key="fontDescription" name="Futura-CondensedMedium" family="Futura" pointSize="26"/>
+                            <color key="textColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                         </textAttributes>
                     </navigationBar>
                     <connections>
