--- a/Digi_Catalogue/SplitViewStoryBoard.storyboard
+++ b/Digi_Catalogue/SplitViewStoryBoard.storyboard
@@ -34,7 +34,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="160" height="220"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mod.png" translatesAutoresizingMaskIntoConstraints="NO" id="jsZ-iq-SGZ">
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="banner1.png" translatesAutoresizingMaskIntoConstraints="NO" id="jsZ-iq-SGZ">
                                                     <rect key="frame" x="0.0" y="0.0" width="160" height="160"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" secondItem="jsZ-iq-SGZ" secondAttribute="height" multiplier="1:1" id="CuJ-OJ-Ja8"/>
@@ -281,6 +281,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="mod.png" width="1024" height="768"/>
+        <image name="banner1.png" width="1250" height="391"/>
     </resources>
 </document>
